--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.5.0</version> 
+			<version>2.7.0</version> 
 		</dependency>
 
 		<dependency>
@@ -116,6 +116,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
 
 	</dependencies>
 	<dependencyManagement>
@@ -151,7 +152,7 @@
         	</plugin>
 
 
-            <plugin>
+            <!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -159,11 +160,11 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
-							<version>${lombok.version}</version> <!-- Use a versão definida ou a variável de versão do Spring Boot -->
+							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
-            </plugin>
+            </plugin> -->
 
 			<plugin>
 				<groupId>org.jacoco</groupId>
